Clicking on a select element should never hide the popup menu. https://bugs.webkit.org/show_bug.cgi?id=136548. <rdar://problem/10215926> Reviewed by Simon Fraser. * html/HTMLSelectElement.cpp: (WebCore::HTMLSelectElement::menuListDefaultEventHandler): Never call hidePopup as a result of a click on a select element. The only way you can properly hide a popup is to click again or lose focus on the popup itself.

Canonical link: https://commits.webkit.org/154351@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@173289 268f45cc-cd09-0410-ab3c-d52691b4dbfc